Bizfi Production/src/objects/Opp_Team__c.object
<CustomObject>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <picklist>
            <picklistValues>
                <fullName>Read</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Read/Write</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opp Teams</relationshipLabel>
        <relationshipName>Opp_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Closer Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closer Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opener</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opener Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Desk Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewals Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opp_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Opp Team</label>
    <nameField>
        <label>OppTeam Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opp Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>